BP-3365 Add PayPal cancellation error translations

--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -462,3 +462,4 @@
 "Sort Credit-debitcard issuers","Triez les émetteurs de cartes de crédit-débit"
 "Giftcard acquirer","Acquéreur de cartes cadeaux"
 "Select your giftcard supplier","Sélectionnez votre fournisseur de cartes cadeaux"
+"You have canceled the payment request.","Vous avez annulé la demande de paiement"
