--- a/i18n/nl_BE.csv
+++ b/i18n/nl_BE.csv
@@ -461,3 +461,4 @@
 "Sort iDEAL banks","Volgorde van de iDEAL issuers"
 "Sort PayByBank Banks","Volgorde van de PayByBank issuers"
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
+"You have canceled the payment request.","Vous avez annulé la demande de paiement"
