--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -469,3 +469,4 @@
 "Sort Credit-debitcard issuers","Volgorde van de Credit-debitcard issuers"
 "Giftcard acquirer","Giftcard acquirer"
 "Select your giftcard supplier","Selecteer cadeaukaartleverancier"
+"You have canceled the payment request.","U heeft het betaalverzoek geannuleerd."
