--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -462,3 +462,4 @@
 "Sort Credit-debitcard issuers","Die Reihenfolge der Kredit- und Debitkartenherausgeber"
 "Giftcard acquirer","Erwerber von Geschenkkarten"
 "Select your giftcard supplier","Wählen Sie Ihren Geschenkkartenanbieter aus"
+"You have canceled the payment request.","Sie haben die Zahlungsanforderung storniert."
