--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -453,7 +453,7 @@
 "Billing Middle Name:","Factuur tussenvoegsel:"
 "E-mail","E-mail:"
 "Expiration:","Vervaldatum:"
-"Buckaroo Bancontact","Buckaroo Bancontact"
+"Bancontact","Bancontact"
 "Invoice Handling","Factuurafhandeling"
 "Create Invoice on Payment","Factuur aanmaken bij een succesvolle betaling"
 "Create Invoice on Shipment","Factuur aanmaken bij het verzending"
