--- a/i18n/be_FR.csv
+++ b/i18n/be_FR.csv
@@ -3,3 +3,7 @@
 "Create Invoice on Shipment","Créer une facture lors de l'expédition"
 "Select the moment when the invoice should be created.","Sélectionnez le moment où la facture devrait être créée."
 "iDIN can be used in different modes, based on when you want iDIN to be required as an additional verification.<br/><strong>Global Mode:</strong> Requires iDIN verification for all products.<br/><strong>Specific Products Mode:</strong> Enables iDIN for selected products via the Magento 2 catalog settings.<br/><strong>Product Categories Mode:</strong> Configures iDIN for specific product categories.","iDIN peut être utilisé dans différents modes, en fonction de quand vous souhaitez que iDIN soit requis comme vérification supplémentaire.<br/><strong>Mode global:</strong> Exige la vérification iDIN pour tous les produits.<br/><strong>Mode Produits spécifiques:</strong> Active iDIN pour les produits sélectionnés via les paramètres du catalogue Magento 2.<br/><strong>Mode Catégories de produits:</strong> Configure iDIN pour des catégories de produits spécifiques."
+"Discount","Réduction"
+"Shipping fee","Les frais d'expédition"
+"Service costs","Frais de service"
+"Discount on","Réduction sur"
