BP-3423-Test mode label in checkout not always correct

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -104,8 +104,10 @@
 "Set to 'No' refunds must be done manualy in Payment Plaza.","Mit der Auswahl 'Nein' werden Gutschriften in Magento bei Payment Plaza nicht angeboten."
 "Push Payment Plaza refunds to Magento","Akzeptieren Sie Payment Plaza-Rückerstattungen in Magento"
 "Allow 2-way refunding from Magento and Payment Plaza.","Verarbeiten Sie die 'Rückerstattung' sowohl von Magento als auch von Payment Plaza."
-"Enabled","Eingeschaltet"
-"Enable or disable the Buckaroo module.","Aktivieren oder deaktivieren Sie das Buckaroo-Modul."
+"Enabled","Aktiviert"
+"Yes","Ja"
+"No","Nein"
+"Enable or disable the Buckaroo plugin.","Aktivieren oder deaktivieren Sie das Buckaroo-Plugin."
 "Selecting 'Off' will overrule all individual settings.","Wenn Sie 'Aus“ wählen, werden alle individuellen Einstellungen überschrieben."
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Fügen Sie Ihren Buckaroo 'Secret key' hinzu."
