--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -106,8 +106,10 @@
 "Set to 'No' refunds must be done manualy in Payment Plaza.","Elegir 'No' para 'los reembolsos se deben realizar manualmente en Payment Plaza'."
 "Push Payment Plaza refunds to Magento","Aceptar reembolsos de Payment Plaza a Magento"
 "Allow 2-way refunding from Magento and Payment Plaza.","Permitir reembolsos bidireccionales entre Magento y Payment Plaza."
-"Enabled","Activado"
-"Enable or disable the Buckaroo module.","Activar o desactivar el módulo de Buckaroo."
+"Enabled","Habilitado"
+"Yes","Sí"
+"No","No"
+"Enable or disable the Buckaroo plugin.","Habilitar o deshabilitar el complemento Buckaroo."
 "Selecting 'Off' will overrule all individual settings.","Si selecciona 'Off', se anularán los ajustes individuales."
 "Secret key","Clave secreta"
 "Enter your Buckaroo Secret Key.","Introduzca su clave secreta de Buckaroo."
