--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -105,7 +105,9 @@
 "Push Payment Plaza refunds to Magento","Accepter les remboursements de Payment Plaza dans Magento"
 "Allow 2-way refunding from Magento and Payment Plaza.","Autoriser le remboursement bidirectionnel depuis Magento et Payment Plaza."
 "Enabled","Activé"
-"Enable or disable the Buckaroo module.","Activez ou désactivez le module Buckaroo."
+"Yes","Oui"
+"No","Non"
+"Enable or disable the Buckaroo plugin.","Activer ou désactiver le plugin Buckaroo."
 "Selecting 'Off' will overrule all individual settings.","La sélection de 'Off' annule tous les paramètres individuels."
 "Secret key","Clé secrète"
 "Enter your Buckaroo Secret Key.","Entrez votre clé secrète Buckaroo"
