--- a/i18n/nl_NL.csv
+++ b/i18n/nl_NL.csv
@@ -107,8 +107,9 @@
 "Push Payment Plaza refunds to Magento","Accepteer Payment Plaza refunds in Magento"
 "Allow 2-way refunding from Magento and Payment Plaza.","Verwerk 'refunding' vanuit zowel Magento als Payment Plaza."
 "Enabled","Ingeschakeld"
-"Enable or disable the Buckaroo module.","Schakel de module in of uit."
-"Selecting 'Off' will overrule all individual settings.","Het selecteren van 'Off' zal alle individuele instellingen overschrijven."
+"Yes","Ja"
+"No","Nee"
+"Enable or disable the Buckaroo plugin.","Schakel de Buckaroo-plugin in of uit."
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Voeg uw Buckaroo 'Secret Key' toe."
 "The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","De 'Secret Key' staat weergegeven in Payment Plaza onder Configuratie > Beveiliging > Secret Key."
