BP-3567-Dutch translation for whole plug-in (And overall review)

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -101,9 +101,9 @@
 "Enable Giropay","Giropay activieren"
 "Refunding","Erstattung"
 "Enable or disable refunding.","Gutschrift/Rückerstattung aktivieren oder deaktivieren."
-"Set to 'No' refunds must be done manualy in Payment Plaza.","Mit der Auswahl 'Nein' werden Gutschriften in Magento bei Payment Plaza nicht angeboten."
-"Push Payment Plaza refunds to Magento","Akzeptieren Sie Payment Plaza-Rückerstattungen in Magento"
-"Allow 2-way refunding from Magento and Payment Plaza.","Verarbeiten Sie die 'Rückerstattung' sowohl von Magento als auch von Payment Plaza."
+"Set to 'No' refunds must be done manualy in Buckaroo Plaza.","Mit der Auswahl 'Nein' werden Gutschriften in Magento bei Buckaroo Plaza nicht angeboten."
+"Push Buckaroo Plaza refunds to Magento","Akzeptieren Sie Buckaroo Plaza-Rückerstattungen in Magento"
+"Allow 2-way refunding from Magento and Buckaroo Plaza.","Verarbeiten Sie die 'Rückerstattung' sowohl von Magento als auch von Buckaroo Plaza."
 "Enabled","Aktiviert"
 "Yes","Ja"
 "No","Nein"
@@ -111,15 +111,15 @@
 "Selecting 'Off' will overrule all individual settings.","Wenn Sie 'Aus“ wählen, werden alle individuellen Einstellungen überschrieben."
 "Secret key","Secret key"
 "Enter your Buckaroo Secret Key.","Fügen Sie Ihren Buckaroo 'Secret key' hinzu."
-"The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","Der 'Secret Key' wird im Payment Plaza angezeigt unter 'Configuration > Security > Secret Key. Wenden Sie sich für Support an Buckaroo."
+"The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","Der 'Secret Key' wird im Buckaroo Plaza angezeigt unter 'Configuration > Security > Secret Key. Wenden Sie sich für Support an Buckaroo."
 "(Website) key","(Website) key"
 "Enter your Buckaroo merchant/website key.","Fügen Sie Ihren Buckaroo merchant/website key hinzu."
-"The (Website) key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der '(Merchant)Key' wird angezeigt in the Buckaroo Payment Plaza unter My Buckaroo > Websites."
+"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","Der '(Merchant)Key' wird angezeigt in the Buckaroo Buckaroo Plaza unter My Buckaroo > Websites."
 "(Merchant) guid","(Merchant) guid"
 "Enter your Buckaroo merchant guid.","Fügen Sie Ihren Buckaroo-Guid code hinzu."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""Die Händler-Guid wird im Buckaroo Payment Plaza angezeigt unter > My Buckaroo > Details > Guid."
+"The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.",""Die Händler-Guid wird im Buckaroo Buckaroo Plaza angezeigt unter > My Buckaroo > Details > Guid."
 "Transaction label","Transaktionsetikett"
-"The transaction description in Payment Plaza.","Die Beschreibung der Transaktion in Payment Plaza."
+"The transaction description in Buckaroo Plaza.","Die Beschreibung der Transaktion in Buckaroo Plaza."
 "These options are only intended for expert users. Tampering with the default settings may negatively affect the workflow and performance of all Buckaroo payment methods. Use at your own risk.","Diese Einstellungen sind nur für erfahrene Benutzer gedacht. Das Anpassen dieser Einstellungen kann die Funktion des Moduls und des Webshops beeinträchtigen. Benutzung auf eigene Gefahr."
 "New status","Neuer Status"
 "This status will be given to new orders.","Dieser Status wird neuen Bestellungen zugewiesen."
@@ -158,12 +158,12 @@
 "Magento Enterprise Edition version","Magento Enterprise Edition-Version"
 "Quick reference guide","Kurzanleitung"
 "Log in to the ","Melden Sie sich an "
-"Buckaroo Payment Plaza","Buckaroo Payment Plaza"
+"Buckaroo Buckaroo Plaza","Buckaroo Buckaroo Plaza"
 " to collect the following security settings:"," um die folgenden Sicherheitseinstellungen zu sammeln:"
 "Support","Die Unterstützung"
 "This extension is developed by Buckaroo.","Diese Erweiterung wird von Buckaroo entwickelt."
 "Extension basic configuration and account information","Basiskonfiguration der Erweiterung und Kontoinformationen"
-"Buckaroo Payment Plaza:","Buckaroo Payment Plaza:"
+"Buckaroo Buckaroo Plaza:","Buckaroo Buckaroo Plaza:"
 "Phone:","Telefon:"
 "E-mail:","Email:"
 "Extension support and advanced configuration","Erweiterungsunterstützung und erweiterte Konfiguration"
@@ -296,7 +296,7 @@
 "The order has already been processed.","Die Bestellung wurde bereits bearbeitet."
 "push notification for refund has no success status, ignoring.","Push-Benachrichtigung für Rückerstattung hat keinen Erfolgsstatus, wird ignoriert. "
 "Warning:","Warnung:"
-"Aufgrund zusammengesetzter Rundungsfehler in Magento bei der Verwendung von anderen Währungen als der Basiswährung des Shops beim Erstellen von Rückerstattungen kann der Betrag, den Sie zurückerstatten, einige Cent mehr oder weniger als beabsichtigt betragen. Wenn Sie sicherstellen möchten, dass der korrekte Betrag erstattet wird, erstellen Sie bitte eine Offline-Erstattung und verwenden Sie dann Buckaroos Zahlungsplatz, um die eigentliche Rückerstattung vorzunehmen.","Wegens oplopende afrondingsfouten in Magento wanneer gekrediteerd wordt in een andere valuta dan de winkel's basisvaluta, kan het voorkomen dat er enkele centen verschil zitten tussen het bedrag dat gekrediteerd moet worden en het bedrag dat daadwerkelijk teruggestort wordt. Indien u zeker wilt zijn dat het juiste bedrag teruggestort wordt, kunt u het beste een offline refund aanmaken en het eigenlijke bedrag terugstorten vanuit Buckaroo's Payment Plaza."
+"Aufgrund zusammengesetzter Rundungsfehler in Magento bei der Verwendung von anderen Währungen als der Basiswährung des Shops beim Erstellen von Rückerstattungen kann der Betrag, den Sie zurückerstatten, einige Cent mehr oder weniger als beabsichtigt betragen. Wenn Sie sicherstellen möchten, dass der korrekte Betrag erstattet wird, erstellen Sie bitte eine Offline-Erstattung und verwenden Sie dann Buckaroos Zahlungsplatz, um die eigentliche Rückerstattung vorzunehmen.","Wegens oplopende afrondingsfouten in Magento wanneer gekrediteerd wordt in een andere valuta dan de winkel's basisvaluta, kan het voorkomen dat er enkele centen verschil zitten tussen het bedrag dat gekrediteerd moet worden en het bedrag dat daadwerkelijk teruggestort wordt. Indien u zeker wilt zijn dat het juiste bedrag teruggestort wordt, kunt u het beste een offline refund aanmaken en het eigenlijke bedrag terugstorten vanuit Buckaroo's Buckaroo Plaza."
 "support.buckaroo.nl","support.buckaroo.nl"
 "Website","Website"
 "www.buckaroo-payments.com","www.buckaroo.com"
@@ -358,8 +358,8 @@
 "White","Witz"
 "White outline","Weißer Umriss"
 "Select where this payment method will be available.","Wählen Sie aus, wo diese Zahlungsmethode verfügbar sein soll."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.","Rückerstattung über Magento Backend nicht möglich. Teilerstattungen in Verbindung mit einer Zahlungsgebühr können nur über die Buckaroo Payment Plaza erstattet werden, siehe auch die <a href="https://support.buckaroo.nl" target="_blank">KB-Artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Payment Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.","Kann diese Bestellung vorerst nicht über Magento Backend zurückerstatten, wir arbeiten an einer Lösung! Credit Management-Bestellungen können nur über Buckaroo Payment Plaza erstattet werden.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Payment Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Rückerstattung über Magento Backend nicht möglich. Teilerstattungen in Verbindung mit einer Zahlungsgebühr können nur über die Buckaroo Buckaroo Plaza erstattet werden, siehe auch die <a href="https://support.buckaroo.nl" target="_blank">KB-Artikel</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Buckaroo Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Kann diese Bestellung vorerst nicht über Magento Backend zurückerstatten, wir arbeiten an einer Lösung! Credit Management-Bestellungen können nur über Buckaroo Buckaroo Plaza erstattet werden.<br><a href="https://plaza.buckaroo.nl" target="_blank">Öffnen Sie ein neues Fenster zum Buckaroo Buckaroo Plaza</a>."
 "Webshops","Webshops"
 "Extensions","Erweiterungen"
 "Commerce","Handel"
