--- a/i18n/es_ES.csv
+++ b/i18n/es_ES.csv
@@ -103,9 +103,9 @@
 "Enable Giropay","Activar Giropay"
 "Refunding","Reembolso"
 "Enable or disable refunding.","Activar o desactivar el reembolso."
-"Set to 'No' refunds must be done manualy in Payment Plaza.","Elegir 'No' para 'los reembolsos se deben realizar manualmente en Payment Plaza'."
-"Push Payment Plaza refunds to Magento","Aceptar reembolsos de Payment Plaza a Magento"
-"Allow 2-way refunding from Magento and Payment Plaza.","Permitir reembolsos bidireccionales entre Magento y Payment Plaza."
+"Set to 'No' refunds must be done manualy in Buckaroo Plaza.","Elegir 'No' para 'los reembolsos se deben realizar manualmente en Buckaroo Plaza'."
+"Push Buckaroo Plaza refunds to Magento","Aceptar reembolsos de Buckaroo Plaza a Magento"
+"Allow 2-way refunding from Magento and Buckaroo Plaza.","Permitir reembolsos bidireccionales entre Magento y Buckaroo Plaza."
 "Enabled","Habilitado"
 "Yes","Sí"
 "No","No"
@@ -113,15 +113,15 @@
 "Selecting 'Off' will overrule all individual settings.","Si selecciona 'Off', se anularán los ajustes individuales."
 "Secret key","Clave secreta"
 "Enter your Buckaroo Secret Key.","Introduzca su clave secreta de Buckaroo."
-"The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clave secreta se encuentra en Payment Plaza, en Configuración > Seguridad > Clave secreta. Si necesita ayuda, póngase en contacto con Buckaroo."
+"The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clave secreta se encuentra en Buckaroo Plaza, en Configuración > Seguridad > Clave secreta. Si necesita ayuda, póngase en contacto con Buckaroo."
 "(Website) key","Clave (vendedor)"
 "Enter your Buckaroo merchant/website key.","Introduzca su clave de vendedor/sitio web de Buckaroo."
-"The (Website) key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clave (vendedor) se encuentra en Payment Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
+"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clave (vendedor) se encuentra en Buckaroo Plaza, en Mi Buckaroo > Sitios web. Si necesita ayuda, póngase en contacto con Buckaroo."
 "(Merchant) guid","GUID (vendedor)"
 "Enter your Buckaroo merchant guid.","Introduzca su GUID de vendedor de Buckaroo."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","El GUID (vendedor) se encuentra en Payment Plaza, en Mi Buckaroo > Detalles > GUID. Si necesita ayuda, póngase en contacto con Buckaroo."
+"The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","El GUID (vendedor) se encuentra en Buckaroo Plaza, en Mi Buckaroo > Detalles > GUID. Si necesita ayuda, póngase en contacto con Buckaroo."
 "Transaction label","Etiqueta de transacción"
-"The transaction description in Payment Plaza.","La descripción de la transacción en Payment Plaza."
+"The transaction description in Buckaroo Plaza.","La descripción de la transacción en Buckaroo Plaza."
 "These options are only intended for expert users. Tampering with the default settings may negatively affect the workflow and performance of all Buckaroo payment methods. Use at your own risk.","Estas opciones están destinadas a los usuarios expertos. Manipular los ajustes predeterminados puede perjudicar el flujo de trabajo y el rendimiento de los métodos de pago de Buckaroo. Si lo hace, será bajo su propia responsabilidad."
 "New status","Estado nuevo"
 "This status will be given to new orders.","Se aplicará este estado a los nuevos pedidos."
@@ -160,12 +160,12 @@
 "Magento Enterprise Edition version","Versión Edición de empresa de Magento"
 "Quick reference guide","Guía de referencia rápida"
 "Log in to the ","Iniciar sesión en"
-"Buckaroo Payment Plaza","Payment Plaza de Buckaroo"
+"Buckaroo Buckaroo Plaza","Buckaroo Plaza de Buckaroo"
 " to collect the following security settings:","para recopilar los siguientes ajustes de seguridad:"
 "Support","Asistencia"
 "This extension is developed by Buckaroo.","Esta extensión la ha desarrollado Buckaroo."
 "Extension basic configuration and account information","Configuración básica de la extensión e información de la cuenta"
-"Buckaroo Payment Plaza:","Payment Plaza de Buckaroo:"
+"Buckaroo Buckaroo Plaza:","Buckaroo Plaza de Buckaroo:"
 "Phone:","Teléfono:"
 "E-mail:","Correo electrónico:"
 "Extension support and advanced configuration","Soporte de extensión y configuración avanzada"
@@ -304,7 +304,7 @@
 "The order has already been processed.","El pedido ya se ha procesado."
 "push notification for refund has no success status","La notificación push del reembolso no tiene el estado 'realizado'. Ignorando."
 "Warning:","Aviso:"
-"Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds","Debido a los errores de redondeo en Magento al usar monedas diferentes a la moneda de base utilizada en la tienda al crear los reembolsos, el importe del reembolso que reciba puede ser de unos céntimos por encima o por debajo de lo que esperaba. Si desea recibir el reembolso de la cantidad correcta, cree un reembolso sin conexión y utilice Payment Plaza de Buckaroo para procesar el reembolso real."
+"Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds","Debido a los errores de redondeo en Magento al usar monedas diferentes a la moneda de base utilizada en la tienda al crear los reembolsos, el importe del reembolso que reciba puede ser de unos céntimos por encima o por debajo de lo que esperaba. Si desea recibir el reembolso de la cantidad correcta, cree un reembolso sin conexión y utilice Buckaroo Plaza de Buckaroo para procesar el reembolso real."
 "support.buckaroo.nl","support.buckaroo.nl"
 "Website","Sitio web"
 "www.buckaroo-payments.com","www.buckaroo-payments.com"
@@ -363,8 +363,8 @@
 "White","Blanco"
 "White outline","Contorno blanco"
 "Select where this payment method will be available.","Seleccione dónde estará disponible este método de pago."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza","No se puede efectuar el reembolso a través del back-end de Magento. Los reembolsos parciales combinados con una tarifa de pago solo se pueden reembolsar a través de Payment Plaza de Buckaroo. Consulte <a href="https://support.buckaroo.nl" target="_blank">Artículo de Buckaroo Docs</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Payment Plaza de Buckaroo en una ventana nueva</a>."
-"Cannot refund this order via Magento Backend for now","En este momento no se puede efectuar el reembolso de este pedido a través del back-end de Magento. ¡ Estamos buscando una solución! Los reembolsos de los pedidos de Credit Management solo se pueden efectuar a través de Payment Plaza de Buckaroo.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Payment Plaza de Buckaroo en una ventana nueva</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza","No se puede efectuar el reembolso a través del back-end de Magento. Los reembolsos parciales combinados con una tarifa de pago solo se pueden reembolsar a través de Buckaroo Plaza de Buckaroo. Consulte <a href="https://support.buckaroo.nl" target="_blank">Artículo de Buckaroo Docs</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Buckaroo Plaza de Buckaroo en una ventana nueva</a>."
+"Cannot refund this order via Magento Backend for now","En este momento no se puede efectuar el reembolso de este pedido a través del back-end de Magento. ¡ Estamos buscando una solución! Los reembolsos de los pedidos de Credit Management solo se pueden efectuar a través de Buckaroo Plaza de Buckaroo.<br><a href="https://plaza.buckaroo.nl" target="_blank">Abrir Buckaroo Plaza de Buckaroo en una ventana nueva</a>."
 "Webshops","Tiendas en línea"
 "Extensions","Extensiones"
 "Commerce","Comercio"
