--- a/i18n/fr_FR.csv
+++ b/i18n/fr_FR.csv
@@ -101,9 +101,9 @@
 "Enable Giropay","Activer Giropay"
 "Refunding","Remboursement"
 "Enable or disable refunding.","Activer ou désactiver le remboursement"
-"Set to 'No' refunds must be done manualy in Payment Plaza.","Défini sur "Non", les remboursements doivent être effectués manuellement dans Payment Plaza."
-"Push Payment Plaza refunds to Magento","Accepter les remboursements de Payment Plaza dans Magento"
-"Allow 2-way refunding from Magento and Payment Plaza.","Autoriser le remboursement bidirectionnel depuis Magento et Payment Plaza."
+"Set to 'No' refunds must be done manualy in Buckaroo Plaza.","Défini sur "Non", les remboursements doivent être effectués manuellement dans Buckaroo Plaza."
+"Push Buckaroo Plaza refunds to Magento","Accepter les remboursements de Buckaroo Plaza dans Magento"
+"Allow 2-way refunding from Magento and Buckaroo Plaza.","Autoriser le remboursement bidirectionnel depuis Magento et Buckaroo Plaza."
 "Enabled","Activé"
 "Yes","Oui"
 "No","Non"
@@ -111,15 +111,15 @@
 "Selecting 'Off' will overrule all individual settings.","La sélection de 'Off' annule tous les paramètres individuels."
 "Secret key","Clé secrète"
 "Enter your Buckaroo Secret Key.","Entrez votre clé secrète Buckaroo"
-"The Secret Key can be retrieved in Payment Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clé secrète peut être récupérée dans Payment Plaza sous Configuration > Sécurité > Clé secrète. Pour obtenir de l'aide, contactez Buckaroo."
+"The Secret Key can be retrieved in Buckaroo Plaza under Configuration > Security > Secret Key. For support contact Buckaroo.","La clé secrète peut être récupérée dans Buckaroo Plaza sous Configuration > Sécurité > Clé secrète. Pour obtenir de l'aide, contactez Buckaroo."
 "(Website) key","Clé (marchand)"
 "Enter your Buckaroo merchant/website key.","Entrez votre clé de marchand/site Web Buckaroo."
-"The (Website) key can be retrieved in Payment Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clé (marchande) peut être récupérée dans Payment Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
+"The (Website) key can be retrieved in Buckaroo Plaza under My Buckaroo > Websites. For support contact Buckaroo.","La clé (marchande) peut être récupérée dans Buckaroo Plaza sous My Buckaroo > Websites. Pour obtenir de l'aide, contactez Buckaroo."
 "(Merchant) guid","(Merchand) guid"
 "Enter your Buckaroo merchant guid.","Entrez votre 'guid' marchand Buckaroo."
-"The (Merchant) Guid can be retrieved in Payment Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","Le Guid (marchand) peut être récupéré dans Payment Plaza sous Mon Buckaroo > Détails > Guid. Pour obtenir de l'aide, contactez Buckaroo."
+"The (Merchant) Guid can be retrieved in Buckaroo Plaza under My Buckaroo > Details > Guid. For support contact Buckaroo.","Le Guid (marchand) peut être récupéré dans Buckaroo Plaza sous Mon Buckaroo > Détails > Guid. Pour obtenir de l'aide, contactez Buckaroo."
 "Transaction label","Libellé de la transaction"
-"The transaction description in Payment Plaza.","La description de la transaction dans Payment Plaza."
+"The transaction description in Buckaroo Plaza.","La description de la transaction dans Buckaroo Plaza."
 "These options are only intended for expert users. Tampering with the default settings may negatively affect the workflow and performance of all Buckaroo payment methods. Use at your own risk.","Ces options sont uniquement destinées aux utilisateurs experts. La modification des paramètres par défaut peut affecter négativement le flux de travail et les performances de tous les modes de paiement Buckaroo. À utiliser à vos risques et périls."
 "New status","Nouveau statut"
 "This status will be given to new orders.","Ce statut sera attribué aux nouvelles commandes."
@@ -158,12 +158,12 @@
 "Magento Enterprise Edition version","Version Magento Enterprise Edition"
 "Quick reference guide","Guide de référence rapide"
 "Log in to the ","Connectez-vous au "
-"Buckaroo Payment Plaza","Place de paiement Buckaroo"
+"Buckaroo Buckaroo Plaza","Place de paiement Buckaroo"
 " to collect the following security settings:"," pour collecter les paramètres de sécurité suivants:"
 "Support","Soutien"
 "This extension is developed by Buckaroo.","Cette extension est développée par Buckaroo."
 "Extension basic configuration and account information","Configuration de base de l'extension et informations sur le compte"
-"Buckaroo Payment Plaza:","Place de paiement Buckaroo:"
+"Buckaroo Buckaroo Plaza:","Place de paiement Buckaroo:"
 "Phone:","Téléphoner:"
 "E-mail:","E-mail:"
 "Extension support and advanced configuration","Prise en charge des extensions et configuration avancée"
@@ -296,7 +296,7 @@
 "The order has already been processed.","La commande a déjà été traitée."
 "push notification for refund has no success status, ignoring.","la notification push pour le remboursement n'a pas de statut de réussite, ignorée."
 "Warning:","Avertissement"
-"Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds, the amount that you refund may be several cents more or less than you intended. If you wish to make sure that the correct amount is refunded, please create an offline refund and then  use Buckaroo's payment plaza to do the actual refund.","En raison d'erreurs d'arrondi composées dans Magento lors de l'utilisation de devises autres que la devise de base du magasin lors de la création de remboursements, le montant que vous remboursez peut être supérieur ou inférieur de plusieurs centimes à celui que vous aviez prévu. Si vous souhaitez vous assurer que le montant correct est remboursé, veuillez créer un remboursement hors ligne, puis utiliser la plateforme de paiement de Buckaroo pour effectuer le remboursement réel."
+"Due to compound rounding errors in Magento when using currencies other than the store's base currency when creating refunds, the amount that you refund may be several cents more or less than you intended. If you wish to make sure that the correct amount is refunded, please create an offline refund and then  use Buckaroo's Buckaroo Plaza to do the actual refund.","En raison d'erreurs d'arrondi composées dans Magento lors de l'utilisation de devises autres que la devise de base du magasin lors de la création de remboursements, le montant que vous remboursez peut être supérieur ou inférieur de plusieurs centimes à celui que vous aviez prévu. Si vous souhaitez vous assurer que le montant correct est remboursé, veuillez créer un remboursement hors ligne, puis utiliser la plateforme de paiement de Buckaroo pour effectuer le remboursement réel."
 "support.buckaroo.nl","support.buckaroo.eu"
 "Website","Website"
 "www.buckaroo-payments.com","www.buckaroo.eu"
@@ -358,8 +358,8 @@
 "White","Blanc"
 "White outline","Contour blanc"
 "Select where this payment method will be available.","Sélectionnez où ce mode de paiement sera disponible."
-"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Payment Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.","Impossible de rembourser via Magento Backend. Les remboursements partiels combinés à des frais de paiement ne peuvent être remboursés que via la Buckaroo Payment Plaza, voir aussi le <a href="https://support.buckaroo.nl" target="_blank">Article de la base de connaissances</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Payment Plaza</a>."
-"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Payment Plaza</a>.",,"Impossible de rembourser cette commande via Magento Backend pour le moment, nous travaillons sur une solution ! Les commandes de gestion du crédit ne peuvent être remboursées que via la Buckaroo Payment Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Payment Plaza</a>."
+"Cannot Refund via Magento Backend. Partial refunds combined with a payment fee can only be refunded via the Buckaroo Buckaroo Plaza, see also the <a href="https://support.buckaroo.nl" target="_blank">KB article</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.","Impossible de rembourser via Magento Backend. Les remboursements partiels combinés à des frais de paiement ne peuvent être remboursés que via la Buckaroo Buckaroo Plaza, voir aussi le <a href="https://support.buckaroo.nl" target="_blank">Article de la base de connaissances</a>.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Buckaroo Plaza</a>."
+"Cannot refund this order via Magento Backend for now, we are working on a solution! Credit Management orders can only be refunded via the Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Open a new window to the Buckaroo Buckaroo Plaza</a>.",,"Impossible de rembourser cette commande via Magento Backend pour le moment, nous travaillons sur une solution ! Les commandes de gestion du crédit ne peuvent être remboursées que via la Buckaroo Buckaroo Plaza.<br><a href="https://plaza.buckaroo.nl" target="_blank">Ouvrir une nouvelle fenêtre sur la Buckaroo Buckaroo Plaza</a>."
 "Webshops","Boutiques en ligne"
 "Extensions","Rallonges"
 "Commerce","Commerce"
